[tool.poetry]
name = "cruz-logger"
version = "0.1.0"
description = "Preconfigured object graph logger with a more enterprise feel to it."
authors = ["Gabe Cruz <gabe.cruz@henryscheinone.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
timestamps = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
